--- a/ryukbot_settings.json
+++ b/ryukbot_settings.json
@@ -1,13 +1,13 @@
 {
     "tf_folder": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Team Fortress 2\\tf",
-    "commands": "",
     "framerate": 60,
     "crosshair": 0,
     "HUD": 1,
     "text_chat": 0,
     "voice_chat": 0,
+    "commands": "",
     "method": "h264",
-    "start_delay": 500,
+    "start_delay": 250,
     "before_bookmark": 1000,
     "after_bookmark": 200,
     "before_killstreak_per_kill": 500,
@@ -18,6 +18,5 @@
     "record_continuous": 1,
     "welcome_message": 1,
     "console_detail": 4,
-    "clear_events": 1,
-    "mods": []
+    "clear_events": 1
 }
