--- a/ryukbot_settings.json
+++ b/ryukbot_settings.json
@@ -18,5 +18,6 @@
     "record_continuous": 1,
     "welcome_message": 1,
     "console_detail": 4,
-    "clear_events": 1
+    "clear_events": 1,
+    "advanced_event_maker": 1
 }
