--- a/ryukbot_settings.json
+++ b/ryukbot_settings.json
@@ -22,24 +22,49 @@
     "advanced_event_maker": 1,
     "mods": [
         {
-            "title": "Lol killstreak",
-            "description": "adds LOL to the end of clips with a killstreak of 69",
-            "code": "suffix 'LOL' on '*'"
+            "title": "Scout Suffix",
+            "description": "Specifies scout clips",
+            "code": "suffix 'Scout' on 'bookmark' value 'scout'"
         },
         {
-            "title": "funny bookmark",
-            "description": "adds funny to the start of bookmarks labeled funny",
-            "code": "prefix 'funny' on 'bookmark' value '*'"
+            "title": "Soldier Suffix",
+            "description": "Specifies soldier clips",
+            "code": "suffix 'Soldier' on 'bookmark' value 'soldier'"
         },
         {
-            "title": "thirdperson",
-            "description": "clips labeled thirdperson are filmed in thirdperson",
-            "code": "run 'thirdperson' on 'bookmark' value 'thirdperson'"
+            "title": "Pyro Suffix",
+            "description": "Specifies pyro clips",
+            "code": "suffix 'Pyro' on 'bookmark' value 'pyro'"
         },
         {
-            "title": "firstperson reset",
-            "description": "all normal clips are filmed in first person, works as a reset to the previous command",
-            "code": "run 'firstperson' on 'bookmark' value 'General'"
+            "title": "Demo Suffix",
+            "description": "Specifies demo clips",
+            "code": "suffix 'Demo' on 'bookmark' value 'demo'"
+        },
+        {
+            "title": "Heavy Suffix",
+            "description": "Specifies heavy clips",
+            "code": "suffix 'Heavy' on 'bookmark' value 'heavy'"
+        },
+        {
+            "title": "Engie Suffix",
+            "description": "Specifies engie clips",
+            "code": "suffix 'Engie' on 'bookmark' value 'engie'"
+        },
+        {
+            "title": "Medic Suffix",
+            "description": "Specifies medic clips",
+            "code": "suffix 'Medic' on 'bookmark' value 'medic'"
+        },
+        {
+            "title": "Sniper Suffix",
+            "description": "Specifies sniper clips",
+            "code": "suffix 'Sniper' on 'bookmark' value 'sniper'"
+        },
+        {
+            "title": "Spy Suffix",
+            "description": "Specifies spy clips",
+            "code": "suffix 'Spy' on 'bookmark' value 'spy'"
         }
     ]
 }
