--- a/ryukbot_settings.json
+++ b/ryukbot_settings.json
@@ -17,9 +17,10 @@
     "rewind_amount": 1000,
     "record_continuous": 1,
     "welcome_message": 1,
-    "console_detail": 10,
-    "clear_events": 0,
+    "console_detail": 69,
+    "clear_events": 1,
     "advanced_event_maker": 1,
+    "safe_mode": 0,
     "mods": [
         {
             "title": "Class Suffix",
